<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.enesky.guvenlikbildir.ui.activity.login.verify.VerifyCodeVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.login.verify.VerifyCodeActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_verify_code"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_16"
            app:boxBackgroundColor="@color/porcelain"
            app:boxCornerRadiusTopEnd="@dimen/default_margin_8"
            app:boxCornerRadiusTopStart="@dimen/default_margin_8"
            app:boxCornerRadiusBottomEnd="@dimen/default_margin_8"
            app:boxCornerRadiusBottomStart="@dimen/default_margin_8"
            android:enabled="@{viewModel.inputsEnabled}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_verify_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enter_code"
                android:inputType="number"
                android:selectAllOnFocus="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_16"
            android:text="@string/label_sign_in"
            android:textAllCaps="false"
            android:enabled="@{viewModel.inputsEnabled}"
            app:layout_constraintTop_toBottomOf="@+id/til_verify_code" />

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            isVisible="@{viewModel.inputsEnabled}"
            app:layout_constraintBottom_toTopOf="@+id/til_verify_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_countdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_max_time"
            android:textSize="@dimen/default_text_18"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/til_verify_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_timeup"
            isVisible="@{!viewModel.inputsEnabled}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/label_time_up"
            android:textSize="@dimen/default_text_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pb_loading" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_resend_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_resend_code"
            android:textAllCaps="false"
            isVisible="@{!viewModel.inputsEnabled}"
            android:layout_marginTop="@dimen/default_margin_8"
            app:layout_constraintTop_toBottomOf="@id/tv_timeup"
            app:layout_constraintStart_toStartOf="@id/tv_timeup"
            app:layout_constraintEnd_toEndOf="@id/tv_timeup"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>