<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.enesky.guvenlikbildir.ui.fragment.options.smsReports.SmsReportVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".ui.fragment.options.contacts.ContactsFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:theme="@style/ToolbarStyle"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:lineHeight="24sp"
                android:text="@string/label_sms_report_history"
                android:textColor="@android:color/white"
                android:textSize="@dimen/default_text_20"
                android:textStyle="bold" />

        </com.google.android.material.appbar.MaterialToolbar>

        <TextView
            android:id="@+id/placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_no_sms_report_found"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/default_text_16"
            android:textStyle="bold"
            android:gravity="center"
            android:visibility="gone"
            tools:visibility="visible"
            app:showWhenListEmpty = "@{viewModel.smsReportHistoryList}"
            app:layout_constraintTop_toBottomOf="@id/pb_loading"/>

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorPrimary"
            android:indeterminateTintMode="src_atop"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_sms_reports"
            style="@style/scrollbar_style"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/default_margin_16"
            android:scrollbars="vertical"
            android:layoutAnimation="@anim/layout_animation"
            tools:itemCount="5"
            tools:listitem="@layout/item_sms_report_history"
            setAdapter="@{viewModel.smsReportHistoryAdapter}"
            app:layout_constraintBottom_toTopOf="@id/tv_size"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
            android:id="@+id/tv_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/default_text_14"
            android:textStyle="bold"
            android:gravity="center"
            android:visibility="gone"
            android:layout_margin="@dimen/default_margin_8"
            app:hideWhenListEmpty="@{viewModel.smsReportHistoryList}"
            app:resId="@{viewModel.sizeTextResId}"
            app:param="@{viewModel.smsReportHistoryList.size()}"
            tools:text="@string/label_sms_history_count"
            tools:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/rv_sms_reports"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>